[package]
name = "test-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }
api = { path = "../api" }
borsh = "0.10"

[target.wasm32-unknown-unknown]
rustflags = [
    # "--cfg=web_sys_unstable_apis",
    # "-C", "target-feature=+atomics,+bulk-memory,+mutable-globals",
    "-C", "link-args=--import-memory",
]
