[package]
name = "test-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }
api = { path = "../api" }
borsh = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = "1"
